vendor/tt-call/tests/ui/type-array-no-len.stderr
error: no rules expected the token `]`
 --> tests/ui/type-array-no-len.rs:5:20
  |
5 |     input = [{ [T; ] }]
  |                    ^ no rules expected this token in macro call
  |
note: while trying to match `_`
 --> src/unexpected.rs
  |
  |     ([$ty:ty; _]) => {};
  |               ^
